# sarthak

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  REVIEW.md  config.toml  mkdocs.yml  providers.json  pyproject.toml  rebuild_frontend.sh
.github/: Dockerfile.arm64build  copilot_instructions.md  release.yml
.github/workflows/: docs.yml  release-please.yml  release.yml
docs/: 404.md  changelog.md  contributing.md  index.md  philosophy.md  release-notes.md
docs/architecture/: overview.md  privacy.md
docs/features/: agents.md  mcp.md  spaces.md  tui.md  web.md
docs/guides/: configuration.md  development.md  installation.md  publishing.md
docs/overrides/: main.html
docs/reference/: cli.md  index.md  sarthak.cli.main.md  sarthak.core.config.md  sarthak.features.ai.agent.md  sarthak.features.mcp.server.md  sarthak.features.tui.app.md  sarthak.web.app.md
docs/stylesheets/: extra.css
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: ConceptGraph.jsx  DropdownMenu.jsx  ForceGraph.jsx  MarkdownEditor.jsx  Modal.jsx  Overlay.jsx  PromptInline.jsx  SettingsPanel.jsx  Sidebar.jsx  SpaceCard.jsx  Toast.jsx  icons.jsx  ui.jsx
frontend/src/components/spaces/: SpaceSettingsTabs.jsx
frontend/src/hooks/: useChatSessions.js  useFetch.js  useResizable.js  useSarthakRuntime.js
frontend/src/pages/: Agents.jsx  Chat.jsx  Config.jsx  Dashboard.jsx  SpacePanels.jsx  Spaces.jsx
frontend/src/pages/spaces/: CreateWizard.jsx  RoadmapBoard.jsx  SpaceSettingsOverlay.jsx  SpacesList.jsx  shared.jsx
frontend/src/sarthak/: ConceptTabs.jsx
frontend/src/sarthak/web/react_dist/: index.html
frontend/src/store/: index.js
frontend/src/utils/: format.js
scripts/: build_binary.ps1  build_binary.sh  gen_ref_pages.py  install-binary.ps1  install-binary.sh  install-whisper.py  install.ps1  install.sh  status.ps1  status.sh  sync_catalog.py  uninstall.ps1  uninstall.sh
src/sarthak/agents/: __init__.py  creator.py  models.py  roadmap_agents.py  runner.py  scheduler.py  store.py
src/sarthak/agents/prompts/: __init__.py  roadmap.py  spaces.py
src/sarthak/agents/sandbox/: __init__.py  audit.py  config.py  enforcer.py  path_guard.py  process_sandbox.py  secret_scrubber.py
src/sarthak/cli/: __init__.py  __main__.py  agents_cli.py  analytics_cli.py  copilot_cli.py  main.py  spaces_cli.py  storage_cli.py
src/sarthak/core/: __init__.py  config.py  configure.py  constants.py  logging.py  notify.py  setup.py  utils.py
src/sarthak/core/ai_utils/: __init__.py  cache.py  catalog.py  github_copilot_auth.py  multi_provider.py  normalize.py  prompt_logger.py  prompts.json  prompts.py  provider_registry.py
src/sarthak/data/: __init__.py  config.toml  loader.py  workspace_templates.yaml
src/sarthak/data/agents/: builtin.toml  orchestrator.md  summary.md  vision.md
src/sarthak/data/agents/orchestrator/: tools-reference.md
src/sarthak/data/agents/roadmap/: agent-creator-space.md  agent-creator-system.md  agent-creator.md  concept-explainer.md  digest-warmup.md  roadmap-generator.md  space-overview.md
src/sarthak/data/agents/spaces/: assessment.md  curriculum.md  engagement.md  environment.md  math.md  onboarding.md  project.md  quicktest.md  task-builder.md  workspace-analyser.md  workspace-designer.md
src/sarthak/data/agents/system/: daily-digest.md  recommendations.md  srs-push.md  (+2 more)
src/sarthak/data/domains/: ai_engineering.yaml  business.yaml  custom.yaml  data_science.yaml  domains_metadata.yaml  education.yaml  exam_prep.yaml  medicine.yaml  research.yaml  software_engineering.yaml
src/sarthak/data/expert_spaces/: __init__.py  ai_engineering.json  business.json  custom.json  data_science.json  education.json  exam_prep.json  medicine.json  research.json  software_engineering.json
src/sarthak/data/skills/: assessment-rubric.md  debug-guide.md  learning-coach.md  math-foundations.md  zpd-teaching.md
src/sarthak/data/tools/: activity.tool.yaml  rag.tool.yaml  shell.tool.yaml  skills.tool.yaml  spaces-advanced.tool.yaml  spaces.tool.yaml  system.tool.yaml
src/sarthak/features/: __init__.py
src/sarthak/features/ai/: __init__.py  agent.py  deps.py
src/sarthak/features/channels/: __init__.py
src/sarthak/features/mcp/: server.py
src/sarthak/features/tui/: alerts.py  app.py  chat.py  dashboard.py  settings.py  summaries.py  theme.py  tips.py
src/sarthak/orchestrator/: __init__.py  orchestrator.py  service.py
src/sarthak/spaces/: __init__.py  domain_loader.py  domains.py  learner_context.py  memory.py  models.py  notes.py  optimizer.py  orchestrator.py  practice.py  rag.py  roadmap_init.py  roadmap_tracker.py  session_graph.py  session_tracker.py  store.py  sub_agents.py  workspace_qa.py  workspace_transformer.py
src/sarthak/spaces/agents/: __init__.py  _common.py  _workspace_analyser.py  assessment.py  content.py  curriculum.py  gamification.py  skills.py  workspace.py
src/sarthak/spaces/roadmap/: __init__.py  db.py  media_analysis.py  models.py  playground.py  quicktest.py  recommend.py  router.py  session_tag.py  srs.py  stt.py  watcher.py  whisper_transcribe.py
src/sarthak/spaces/tools/: __init__.py  badges.py  env_scan.py  external_tools.py  srs.py  workspace_apply.py
src/sarthak/storage/: __init__.py  activity_store.py  db.py  encrypt.py  factory.py  helpers.py  migrate.py  sql_loader.py
src/sarthak/storage/backends/: __init__.py  duckdb.py  libsql.py  postgres.py  sqlite.py
src/sarthak/storage/repositories/: __init__.py  activity.py  base.py  chat.py  embeddings.py  roadmap.py
src/sarthak/storage/vector/: __init__.py  chroma.py  lancedb.py  pgvector.py  qdrant.py  sqlite_vec.py  weaviate.py
src/sarthak/web/: __init__.py  app.py
src/sarthak/web/routers/: __init__.py  activity.py  ag_ui.py  agents.py  chat.py  config.py  dashboard.py  helpers.py  spa.py  spaces.py  spaces_practice.py  spaces_rag.py  spaces_settings.py
src/sarthak/web/services/: __init__.py  chat.py
tests/: test_markitdown.py
(+35 files in other folders)
