
[project]
name = "sarthak"
version = "0.0.3"
description = "Privacy-first self-analytics intelligence platform for Linux, macOS, and Windows"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
keywords = ["ai", "productivity", "cli", "analytics", "spaces", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    # Core
    "pydantic",
    "click",
    "structlog",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "psutil",
    "pywin32; platform_system == 'Windows'",
    # Encryption
    "cryptography",
    # AI
    "httpx",
    "pydantic-ai",
    # TUI
    "textual",
    "rich",
    # MCP
    "mcp",
    "questionary",
    "tomlkit",
    "pyperclip",
    "pytz",
    "python-telegram-bot",
    "croniter",
    # Roadmap system
    "aiosqlite",
    "sqlite-vec",
    "watchfiles",
    "pydantic-ai-slim[ag-ui,duckduckgo,openrouter]",
    "markitdown[all]",
    "pdfminer.six",
    "platformdirs",
]

[project.urls]
Homepage = "https://github.com/productive-pro/sarthak"
Repository = "https://github.com/productive-pro/sarthak"
Issues = "https://github.com/productive-pro/sarthak/issues"

[project.optional-dependencies]
# Cloud AI providers
cloud = [
    "openai",
    "anthropic",
]

# Relational DB backends (sqlite is built-in, no extra needed)
postgres = ["asyncpg"]
duckdb   = ["duckdb"]
libsql   = ["libsql-client"]

# Vector DB backends (sqlite-vec is in core deps, no extra needed)
qdrant   = ["qdrant-client"]
chroma   = ["chromadb"]
pgvector = ["asyncpg", "pgvector"]
lancedb  = ["lancedb", "pyarrow"]
weaviate = ["weaviate-client>=4.0"]

# Cache
redis = ["redis[asyncio]"]

# Everything except defaults (sqlite + sqlite-vec)
all-backends = [
    "asyncpg",
    "duckdb",
    "libsql-client",
    "qdrant-client",
    "chromadb",
    "pgvector",
    "lancedb",
    "pyarrow",
    "weaviate-client>=4.0",
    "redis[asyncio]",
]

[project.scripts]
sarthak = "sarthak.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "zensical",
    "mkdocstrings",
    "mkdocstrings-python",
    "pymdown-extensions",
    # Binary build (replaces nuitka — simpler CI, same result)
    "pyinstaller",
    # Conventional commits + changelog automation
    "commitizen",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Include react_dist in the source tarball so wheel-from-sdist works too
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/config.toml",
]
artifacts = [
    "src/sarthak/web/react_dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sarthak"]
# react_dist is in .gitignore (build artifact), so we must declare it explicitly
# to ensure it is included in the wheel when publishing to PyPI.
artifacts = [
    "src/sarthak/web/react_dist/**",
]


[tool.uv]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "docs/changelog.md"
changelog_incremental = true
major_version_zero = true

[tool.ruff.lint]
select = ["E", "F", "I"]
